--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="hint_password">Contraseña</string>
     <string name="btn_login">INICIAR SESIÓN</string>
     <string name="btn_register">CREAR CUENTA</string>
-    <string name="copyright">© 2024 MotoTaller Pro</string>
+    <string name="copyright">© 2025 MotoTaller Pro</string>
 
     <!-- Register screen strings -->
     <string name="back">Atrás</string>
@@ -27,7 +27,11 @@
     <string name="bienvenido">Bienvenido</string>
     <string name="usuario">Usuario</string>
     <string name="dashboard_message">🎉 ¡Login y registro implementados exitosamente!&#10;&#10;Próximamente: Dashboard completo</string>
+    <string name="dashboard_title">¡Bienvenido a MotoTaller!</string>
+    <string name="dashboard_body">Nuestra plataforma está lista — explora tus talleres y almacenes desde aquí. Próximamente agregaremos más funcionalidades.</string>
+    <string name="dashboard_emoji">🎉</string>
     <string name="btn_logout">CERRAR SESIÓN</string>
+    <string name="avatar_default">?</string>
 
     <!-- Social login -->
     <string name="btn_login_google">Continuar con Google</string>
@@ -35,4 +39,18 @@
     <string name="hint_google_token">Pega aquí tu Google ID Token</string>
     <string name="hint_facebook_token">Pega aquí tu Facebook Access Token</string>
     <string name="or_continue_with">o continúa con</string>
+
+    <!-- Facebook SDK placeholders: reemplazados por los valores proporcionados -->
+    <string name="facebook_app_id">fb725126533892938</string>
+    <string name="facebook_app_id_numeric">725126533892938</string>
+    <string name="facebook_client_token">639e3d91cfc30af0f1d2e8d66b1bf2a9</string>
+    <string name="fb_login_protocol_scheme">fb725126533892938</string>
+
+    <!-- Google OAuth: Server Client ID (tipo Web) que tu backend valida. Reemplazado por el real. -->
+    <string name="google_server_client_id">926718099758-osi38sedrsjvil21a10f1eq25ub0q351.apps.googleusercontent.com</string>
+
+    <!-- Added required hints -->
+    <string name="hint_name_required">Nombre *</string>
+    <string name="hint_lastname_required">Apellido *</string>
+    <string name="join_code_optional">Código para unirse a otro taller (Opcional)</string>
 </resources>
