--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,20 +31,13 @@
     <string name="dashboard_body">Nuestra plataforma está lista — explora tus talleres y almacenes desde aquí. Próximamente agregaremos más funcionalidades.</string>
     <string name="dashboard_emoji">🎉</string>
     <string name="btn_logout">CERRAR SESIÓN</string>
-    <string name="avatar_default">?</string>
+    <string name="avatar_default">\?</string>
 
     <!-- Social login -->
     <string name="btn_login_google">Continuar con Google</string>
-    <string name="btn_login_facebook">Continuar con Facebook</string>
     <string name="hint_google_token">Pega aquí tu Google ID Token</string>
-    <string name="hint_facebook_token">Pega aquí tu Facebook Access Token</string>
     <string name="or_continue_with">o continúa con</string>
 
-    <!-- Facebook SDK placeholders: reemplazados por los valores proporcionados -->
-    <string name="facebook_app_id">fb725126533892938</string>
-    <string name="facebook_app_id_numeric">725126533892938</string>
-    <string name="facebook_client_token">639e3d91cfc30af0f1d2e8d66b1bf2a9</string>
-    <string name="fb_login_protocol_scheme">fb725126533892938</string>
 
     <!-- Google OAuth: Server Client ID (tipo Web) que tu backend valida. Reemplazado por el real. -->
     <string name="google_server_client_id">926718099758-osi38sedrsjvil21a10f1eq25ub0q351.apps.googleusercontent.com</string>
